--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  background-color: rgb(255, 255, 255);
+}
+
 #pizzaMenu {
   text-align: center;
   text-transform: uppercase;
@@ -16,3 +22,9 @@
   color: rgba(0, 0, 0, 0.398);
   font-weight: 700;
 }
+
+.factsBtn {
+  width: "100%";
+}
+
+
