--- a/src/App/Acordations.css
+++ b/src/App/Acordations.css
@@ -1,4 +1,5 @@
-.hidden {
+.description,
+.descriptionList {
   display: none;
 }
 
@@ -7,7 +8,8 @@
   height: 40px;
 }
 
-.hiddenBox {
+.hiddenBox,
+.NotHidden {
   width: 800px;
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -19,14 +21,7 @@
   margin-bottom: 32px;
 }
 
-.discription {
-  font-size: 16px;
-  line-height: 1.6;
-  grid-column: 2;
-  grid-row: 2;
-}
-
-.discriptionList {
+.NotHidden .descriptionList {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -35,21 +30,30 @@
   margin-left: 14px;
 }
 
+.NotHidden .description {
+  display: block;
+  font-size: 18px;
+  line-height: 1.6;
+  grid-column: 2;
+  grid-row: 2;
+}
+
 .hiddenBox:hover {
   cursor: pointer;
 }
 
-.number,
-.title,
-.icon {
+.NotHidden .number,
+.NotHidden .title,
+.NotHidden .icon {
   color: rgb(169, 225, 79);
 }
 
-.numberWhenHidden {
+.number {
   color: #adb5bd;
 }
 
-.titleWhenHidden,
-.iconWhenHidden {
+.title,
+.icon {
+    font-size: 32px;
   color: rgba(0, 0, 0, 0.7);
 }
