--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .status {
   text-align: center;
   margin: 36px auto;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: rgba(0, 0, 0, 0.398);
   font-weight: 700;
 }
@@ -26,4 +26,10 @@
   width: "100%";
 }
 
-
+.customerReviews {
+  margin-top: 64px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: rgba(0, 0, 0, 0.7);
+}
